[package]
name = "watch_log_2_mes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"
walkdir = "2.4"
encoding_rs = "0.8"
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
globset = "0.4"
